@startuml
'https://plantuml.com/class-diagram

class User {
- Long userId
- String userName
- String password
- Integer role
- List<Auth> auths
}

class Auth {
- String name
- String uri
}

User -right..> Auth
UserService ..> Session
UserService -right..> AuthService


class UserService {
+ login() //登录
}

class AuthService {
 + getByRole() //获取角色权限
 }

class Session {
- ConcurrentMap<String, User> MAP
+ put()
}

@enduml